# eventd

./: .gitignore  .gitmodules  .travis.yml  COPYING.md  Makefile.am  PROTOCOL  PROTOCOL.md  README  README.md  autogen.sh  configure.ac  meson.build  meson_options.txt
client/eventc/: .gitignore  eventc.mk  meson.build
client/eventc/src/: eventc.c  eventc.vala
client/libeventc/: .gitignore  libeventc.mk  meson.build
client/libeventc-light/: libeventc-light.mk  meson.build
client/libeventc-light/include/: libeventc-light.h
client/libeventc-light/pkgconfig/: libeventc-light.pc.in
client/libeventc-light/src/: libeventc-light.c
client/libeventc/include/: libeventc.h
client/libeventc/pkgconfig/: libeventc.pc.in
client/libeventc/src/: libeventc.c  libeventc.vala
client/libeventc/tests/: meson.build
client/libeventc/vapi/: libeventc.deps.in  libeventc.vapi
plugins/canberra/: .gitignore  canberra.mk  meson.build
plugins/canberra/man/: eventd-canberra.conf.xml  eventd-canberra.event.xml
plugins/canberra/src/: canberra.c
plugins/exec/: exec.mk  meson.build
plugins/exec/man/: eventd-exec.conf.xml  eventd-exec.event.xml
plugins/exec/src/: exec.c
plugins/fdo-notifications/: .gitignore  fdo-notifications.mk  meson.build
plugins/fdo-notifications/events/: libnotify.action  libnotify.event  notification.action  notification.event
plugins/fdo-notifications/man/: eventd-fdo-notifications.xml
plugins/fdo-notifications/src/: debug-daemon.c  fdo-notifications.c  fdo-notifications.h  notify.c
plugins/file/: file.mk  meson.build
plugins/file/man/: eventd-file.conf.xml
plugins/file/src/: file.c
plugins/im/: im.mk  meson.build
plugins/im/man/: eventd-im.conf.xml  eventd-im.event.xml  eventdctl-im.xml
plugins/im/src/: im.c  io.c  io.h  ops.c  ops.h
plugins/nd/: .gitignore  linux.mk  meson.build  nd.mk  win.mk  xcb.mk
plugins/nd/events/: eventd-nd-more-bottom-left.action  eventd-nd-more-bottom-right.action  eventd-nd-more-bottom.action  eventd-nd-more-top-left.action  eventd-nd-more-top-right.action  eventd-nd-more-top.action  eventd-nd-more.action  eventd-nd-more.event
plugins/nd/fdonotificationscapabilities/: nd-icons.capabilities  nd.capabilities
plugins/nd/include/: eventd-nd-backend.h  eventd-weston-output-focus-api.h
plugins/nd/linux/: linux.c  linux.mk
plugins/nd/man/: eventd-nd.conf.xml  eventd-nd.event.xml  eventdctl-nd.xml
plugins/nd/protocols/: notification-area-unstable-v1.xml  notification-manager-unstable-v1.xml
plugins/nd/src/: backend-fbdev.c  backend-fbdev.h  backend-linux.c  backend-wayland.c  backend-win.c  backend-win.h  backend-xcb.c  backend-xcb.h  backend.h  backends.c  backends.h  blur.c  blur.h  cairo.c  cairo.h  draw.c  draw.h  icon.c  icon.h  libweston-plugin.c  nd.c  nd.h  notification.c  notification.h  pixbuf.c  pixbuf.h  style.c  style.h  types.h  wayland.c  wayland.h
plugins/nd/win/: win.mk
plugins/nd/xcb/: xcb.c  xcb.mk
plugins/notify/: meson.build  notify.mk
plugins/notify/events/: libnotify.event
plugins/notify/man/: eventd-notify.conf.xml  eventd-notify.event.xml
plugins/notify/src/: icon.h  image.c  image.h  notify.c
plugins/sound/: .gitignore  meson.build  sound.mk
plugins/sound/fdonotificationscapabilities/: sound.capabilities
plugins/sound/man/: eventd-sound.conf.xml  eventd-sound.event.xml
plugins/sound/src/: pulseaudio.c  pulseaudio.h  sound.c
plugins/test-plugin/: .gitignore  meson.build  test-plugin.mk
plugins/test-plugin/config/: eventd.conf  eventd.conf.in  test.action  test.action.in  test.event  test.event.in  test.pem.in
plugins/test-plugin/events/: test.action  test.event
plugins/test-plugin/src/: test-plugin.c
plugins/tts/: meson.build  tts.mk
plugins/tts/man/: eventd-tts.conf.xml  eventd-tts.event.xml
plugins/tts/src/: tts.c
plugins/webhook/: meson.build
plugins/webhook/man/: eventd-webhook.conf.xml
plugins/webhook/src/: webhook.c
plugins/ws/: meson.build
plugins/ws/man/: eventd-ws.conf.xml
plugins/ws/src/: ws-client.c  ws-client.h  ws.c  ws.h
server/eventd/: eventd.mk  meson.build
server/eventd/events/: .gitignore  events.mk
server/eventd/man/: eventd.conf.xml  eventd.event.xml  eventd.xml
server/eventd/pkgconfig/: eventd.pc.in
server/eventd/src/: actions.c  actions.h  config.c  config.h  config_.h  control.c  control.h  dbus.h  eventd.c  eventd.h  events.c  events.h  plugins.c  plugins.h  queue.c  queue.h  sd-modules.c  sd-modules.h  sockets.c  sockets.h  types.h
server/eventd/tests/: meson.build
server/eventd/units/: eventd.service.in  eventd.socket.in
server/eventdctl/: eventdctl.mk  meson.build
server/eventdctl/include/: eventdctl.h
server/eventdctl/man/: eventdctl.xml
server/eventdctl/src/: eventdctl.c
server/libeventd/: .gitignore  libeventd.mk  meson.build
server/libeventd-helpers/: libeventd-helpers.mk  meson.build
server/libeventd-helpers/include/: libeventd-helpers-config.h  libeventd-helpers-dirs.h  libeventd-helpers-reconnect.h
server/libeventd-helpers/src/: config.c  dirs.c  reconnect.c
server/libeventd-plugin/: libeventd-plugin.mk  meson.build
server/libeventd-plugin/include/: eventd-plugin-interfaces.h  eventd-plugin-private.h  eventd-plugin.h
server/libeventd-plugin/pkgconfig/: libeventd-plugin.pc.in
server/libeventd-plugin/src/: core.c  plugin.c
server/libeventd-test/: libeventd-test.mk  meson.build
server/libeventd-test/include/: libeventd-test.h
server/libeventd-test/src/: libeventc-test.c  libtest.c
server/libeventd-test/vapi/: libeventd-test.vapi
server/libeventd/aclocal/: eventd.m4
server/libeventd/include/: libeventd-config.h  libeventd-event-private.h  libeventd-event.h  libeventd-nd-notification-icon.h  libeventd-nd-notification.h  libeventd-protocol-json.h  libeventd-protocol.h  libeventd-reconnect.h  libeventd-regex.h
server/libeventd/pkgconfig/: libeventd-protocol-json.pc.in  libeventd.pc.in
server/libeventd/src/: config.c  event-private.c  event-private.h  event.c  nd-notification.c  protocol-evp-generator.c  protocol.c  (+10 more)
server/modules/: meson.build  modules.mk
(+428 files in other folders)
